Build 131, v1.2.5.4: - ResultManager fixed for double rounding